--- a/public/operative/training matrix.html
+++ b/public/operative/training matrix.html
@@ -1,4 +1,3 @@
-<!-- training_matrix.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +11,7 @@
       margin: 0;
       padding: 20px;
     }
+
     .section {
       background: white;
       padding: 20px;
@@ -19,40 +19,49 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       margin-bottom: 30px;
     }
+
     h2 {
       margin-top: 0;
     }
+
     input[type="file"], button {
       padding: 10px;
       margin-top: 10px;
       display: block;
     }
+
     #cardPreview {
       margin-top: 10px;
       max-height: 120px;
       border: 1px solid #ccc;
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
     }
+
     th, td {
       padding: 12px;
       border: 1px solid #ddd;
       text-align: center;
     }
+
     th {
       background: #ff6600;
       color: white;
     }
+
     @media (max-width: 600px) {
       body {
         padding: 10px;
       }
+
       .section {
         padding: 15px;
       }
+
       th, td {
         font-size: 14px;
       }
@@ -60,10 +69,12 @@
   </style>
 </head>
 <body>
+
   <div class="section">
     <h2>📸 Scan CSCS Card</h2>
     <input type="file" id="cardInput" accept="image/*" />
     <button onclick="scanCard()">Scan Card</button>
+
     <div id="scanResult" style="display:none;">
       <p><strong>Name:</strong> <span id="name">-</span></p>
       <p><strong>Card Number:</strong> <span id="cardNumber">-</span></p>
@@ -93,7 +104,11 @@
   </div>
 
   <script>
+    // ✅ CHANGE THIS if deploying somewhere else
+    const BACKEND_URL = 'https://smartsite-mvp-de16b70f49d2.herokuapp.com';
+
     let scannedData = null;
+
     async function scanCard() {
       const fileInput = document.getElementById("cardInput");
       if (!fileInput.files.length) return alert("Please upload a card image.");
@@ -102,14 +117,22 @@
       formData.append("image", fileInput.files[0]);
 
       try {
-        const response = await fetch("https://smartsite-mvp-de16b70f49d2.herokuapp.com/scan", {
+        const response = await fetch(`${BACKEND_URL}/scan`, {
           method: "POST",
           body: formData
         });
 
+        if (!response.ok) {
+          const errorText = await response.text();
+          throw new Error(`Error ${response.status}: ${errorText}`);
+        }
+
         const data = await response.json();
 
-        if (data.error) return alert("Scan failed: " + data.error);
+        if (data.error) {
+          alert("Scan failed: " + data.error);
+          return;
+        }
 
         scannedData = data;
         document.getElementById("scanResult").style.display = "block";
@@ -118,10 +141,9 @@
         document.getElementById("expiry").textContent = data.expiry || "-";
         document.getElementById("qualifications").textContent = data.qualifications || "-";
         document.getElementById("cardPreview").src = data.imageUrl || "";
-
       } catch (err) {
+        alert("❌ Error connecting to backend. Details in console.");
         console.error(err);
-        alert("❌ Error connecting to backend.");
       }
     }
 
