--- a/public/operative/training-matrix.html
+++ b/public/operative/training-matrix.html
@@ -2,40 +2,93 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>SmartSite Training Matrix</title>
+  <title>SmartSite | Training Matrix + CSCS Scanner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-    }
-    .header, .scan-section {
+      font-family: Arial;
+      background: #f9f9f9;
+      margin: 0;
       padding: 20px;
+    }
+
+    .section {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      margin-top: 0;
+    }
+
+    input[type="file"], button {
+      padding: 10px;
+      margin-top: 10px;
+      display: block;
+    }
+
+    #cardPreview {
+      margin-top: 10px;
+      max-height: 120px;
+      border: 1px solid #ccc;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+
+    th, td {
+      padding: 12px;
+      border: 1px solid #ddd;
       text-align: center;
     }
-    table {
-      border-collapse: collapse;
-      width: 90%;
-      margin: auto;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 10px;
-    }
+
     th {
-      background-color: orange;
+      background: #ff6600;
       color: white;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+
+      .section {
+        padding: 15px;
+      }
+
+      th, td {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <h2>📸 Upload & Scan CSCS Card</h2>
-    <input type="file" id="fileInput" />
-    <button onclick="scanCard()">Scan</button>
+
+  <div class="section">
+    <h2>📸 Scan CSCS Card</h2>
+    <input type="file" id="cardInput" accept="image/*" />
+    <button onclick="scanCard()">Scan Card</button>
+
+    <div id="scanResult" style="display:none;">
+      <p><strong>Name:</strong> <span id="name">-</span></p>
+      <p><strong>Card Number:</strong> <span id="cardNumber">-</span></p>
+      <p><strong>Expiry:</strong> <span id="expiry">-</span></p>
+      <p><strong>Qualification:</strong> <span id="qualifications">-</span></p>
+      <img id="cardPreview" src="" alt="Card Preview"/>
+      <br />
+      <button onclick="addToMatrix()">✅ Add to Matrix</button>
+    </div>
   </div>
 
-  <div class="scan-section">
-    <h2>📋 Training Matrix</h2>
-    <table>
+  <div class="section">
+    <h2>📚 Training Matrix</h2>
+    <table id="trainingTable">
       <thead>
         <tr>
           <th>Name</th>
@@ -44,53 +97,67 @@
           <th>Preview</th>
         </tr>
       </thead>
-      <tbody id="matrixBody"></tbody>
+      <tbody>
+        <!-- Rows added here -->
+      </tbody>
     </table>
   </div>
 
   <script>
-    // ✅ Use your exact backend Heroku URL
- const backendUrl ="https://smartsite-mvp-de16b70f49d2.herokuapp.com";
+    const backendUrl = "https://smartsite-mvp-de16b70f49d2.herokuapp.com";
+    let scannedData = null;
 
-
-
-    function scanCard() {
-      const fileInput = document.getElementById("fileInput");
-      const file = fileInput.files[0];
-
-      if (!file) {
-        alert("Please upload a CSCS card image first.");
-        return;
-      }
+    async function scanCard() {
+      const fileInput = document.getElementById("cardInput");
+      if (!fileInput.files.length) return alert("Please upload a card image.");
 
       const formData = new FormData();
-      formData.append("image", file);
+      formData.append("image", fileInput.files[0]);
 
-      fetch(`${backendUrl}/scan`, {
-        method: "POST",
-        body: formData,
-      })
-        .then(res => {
-          if (!res.ok) {
-            throw new Error("Error connecting to backend.");
-          }
-          return res.json();
-        })
-        .then(data => {
-          const row = document.createElement("tr");
-          row.innerHTML = `
-            <td>${data.name}</td>
-            <td>${data.qualifications}</td>
-            <td>${data.expiry}</td>
-            <td><img src="${backendUrl}${data.imageUrl.startsWith('/') ? data.imageUrl : '/' + data.imageUrl}" width="100"/></td>
-          `;
-          document.getElementById("matrixBody").appendChild(row);
-        })
-        .catch(err => {
-          console.error(err);
-          alert("❌ Error connecting to backend.");
+      try {
+        const response = await fetch(`${backendUrl}/scan`, {
+          method: "POST",
+          body: formData,
         });
+
+        const data = await response.json();
+
+        if (data.error) {
+          alert("Scan failed: " + data.error);
+          return;
+        }
+
+        scannedData = data;
+        document.getElementById("scanResult").style.display = "block";
+        document.getElementById("name").textContent = data.name || "-";
+        document.getElementById("cardNumber").textContent = data.cardNumber || "-";
+        document.getElementById("expiry").textContent = data.expiry || "-";
+        document.getElementById("qualifications").textContent = data.qualifications || "-";
+        document.getElementById("cardPreview").src = data.imageUrl || "";
+      } catch (err) {
+        alert("❌ Error connecting to backend.");
+        console.error(err);
+      }
+    }
+
+    function addToMatrix() {
+      if (!scannedData) return;
+
+      const row = document.createElement("tr");
+      row.innerHTML = `
+        <td>${scannedData.name || "-"}</td>
+        <td>${scannedData.qualifications || "-"}</td>
+        <td>${scannedData.expiry || "-"}</td>
+        <td><img src="${scannedData.imageUrl || ""}" alt="Preview" style="height:40px;" /></td>
+      `;
+      document.querySelector("#trainingTable tbody").appendChild(row);
+
+      alert("✅ Added to training matrix!");
+      scannedData = null;
+      document.getElementById("scanResult").style.display = "none";
+      document.getElementById("cardInput").value = '';
     }
   </script>
+
 </body>
 </html>
