Fix: correct Training Matrix link with proper file path

--- a/public/operative/operative-dashboard.html
+++ b/public/operative/operative-dashboard.html
@@ -68,7 +68,7 @@
   <div class="header">🦺 SmartSite Operative Dashboard</div>
 
   <div class="grid">
-    <div class="card" onclick="location.href='training matrix.html'">
+    <div class="card" onclick="location.href='operative/training-matrix.html'">
       <i class="fa fa-graduation-cap"></i>
       <h3>Training Matrix</h3>
     </div>
